--- a/package.json
+++ b/package.json
@@ -29,10 +29,16 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
+    "ghooks": "2.0.0",
     "mocha": "3.2.0",
     "semantic-release": "^6.3.2"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run test:single"
+    }
   }
 }
