--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test": "mocha src/index.test.js --compilers js:babel-register",
     "cover": "nyc npm t",
     "prebuild": "rimraf dist",
-    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build": "npm-run-all --parallel build:*",
+    "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.24.0",
+    "babel-loader": "6.4.0",
     "babel-preset-es2015": "6.24.0",
     "babel-preset-stage-2": "6.22.0",
     "babel-register": "6.24.0",
@@ -45,10 +49,13 @@
     "codecov.io": "0.1.6",
     "ghooks": "2.0.0",
     "istanbul": "0.4.5",
+    "json-loader": "0.5.4",
     "mocha": "3.2.0",
+    "npm-run-all": "4.0.2",
     "nyc": "10.1.2",
     "rimraf": "2.6.1",
-    "semantic-release": "^6.3.2"
+    "semantic-release": "^6.3.2",
+    "webpack": "2.2.1"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
